--- a/09_DOM/index.html
+++ b/09_DOM/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello World!
+    <!-- Hello World! -->
+
+    <div class="container">
+        <div class="box">Box1</div>
+        <div class="box">Box2</div>
+        <div class="box">Box3</div>
+        <div class="box">Box4</div>
+        <div class="box">Box5</div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
