--- a/09_DOM/index.html
+++ b/09_DOM/index.html
@@ -17,6 +17,37 @@
         <div class="box">Box5</div>
     </div>
 
+    <div>
+        <table border="1">
+            <thead>
+                <caption>Marklist</caption>
+                <tr>
+                    <th>Sr. No.</th>
+                    <th>Name</th>
+                    <th>Marks</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Ayush A.</td>
+                    <td>94</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Ayush P.</td>
+                    <td>94</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="2">Total</td>
+                    <td>188</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
