Learnt something interesting

--- a/12_handling_events/event_bubbling.html
+++ b/12_handling_events/event_bubbling.html
@@ -95,7 +95,7 @@
         //     document.querySelector(".child").style.backgroundColor = getRandomColor()
         // }, 5000)
 
-        // clearTimeout -> used to clear the setTimeout
+        // clearTimeout() -> used to clear the setTimeout
     </script>
 </body>
 </html>
