Learnt some more concepts

--- a/12_handling_events/browser_events.html
+++ b/12_handling_events/browser_events.html
@@ -50,11 +50,13 @@
 
         // Keyboard Events
 
+        // // triggered when a key is pressed down
         // btn.addEventListener("keydown", (e) => {
         //     console.log(e)
         //     console.log(e.key)
         // })
 
+        // // triggered when a key is released
         // btn.addEventListener("keyup", (e) => {
         //     console.log(e)
         //     console.log(e.key)
